2003-01-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: When gerbv discovered RS274D and terminated
	  it tried to free memory to hadn't been allocated due to 
	  it had discovered error in the gerber file. This caused
	  windows to never close and segfaults when terminating.

2002-12-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv_screen.h, src/gerbv.c: Changed how the
	  different windows are stored in the screen struct.
	* src/amacro.h: Forgot to include stdlib.h which was needed
	  to remove warnings regarding free missing.
	* src/gerbv.c: Minor beautification cleanups.

2002-12-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed 64-bit compilation warning by casting
	  gpointer to long int. Closes bug #642703.

2002-12-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Fixed some kind of bug causing some filled 
	  polygons not to get displayed. Reported by Chris Ellec. 
	  Closes bug #649663.

2002-12-02  Anders Eriksson  <anders@umunet.org>

	* configure.in, src/amacro.c: Applied patch from 
	  Charles Lepple to fix bug #646268 (building on MacOS X).

2002-11-26  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Fixes bug #643799 (zoom out_line stopped
	  working).

2002-11-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added idea and (hacked up by me) patch for
	  turning all layers on and off from Martin Sigrand. It should
	  really need an overhaul regarding non freed memory.

2002-11-24  Stefan Petersen  <spe@stacken.kth.se>

	* doc/eagle/*: Added information for Eagle CAD users from
	  Daniel Dorau. It also made the webpage. Thanks Daniel!  

	* src/gerber.c: Yet another G-code (55) discovered in an
	  example in the "standard" by our russian friend Yuri.

2002-11-23  Stefan Petersen  <spe@stacken.kth.se>

	* src/amacro.c, src/draw.c, src/draw_amacro.c, src/gerber.c:
	  More files with the same mistake in as below. I cleaned up 
	  my own mess this time.
